[gd_scene load_steps=7 format=3 uid="uid://dgy3aq2khp1bw"]

[ext_resource type="Script" path="res://Prototype/SerializationTest.gd" id="1_xfx3p"]
[ext_resource type="Script" path="res://Prototype/GameCamera.gd" id="3_uq60h"]
[ext_resource type="Script" path="res://Addons/smoothing/smoothing.gd" id="4_4gn3j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3k0wf"]
sky_horizon_color = Color(0.223529, 0.517647, 0.670588, 1)
sky_curve = 0.197926
ground_bottom_color = Color(0.227451, 0.352941, 0.592157, 1)
ground_horizon_color = Color(0.286275, 0.521569, 0.290196, 1)
ground_curve = 0.937017

[sub_resource type="Sky" id="Sky_l7vq8"]
sky_material = SubResource("ProceduralSkyMaterial_3k0wf")

[sub_resource type="Environment" id="Environment_mkv08"]
background_mode = 2
sky = SubResource("Sky_l7vq8")
ambient_light_source = 3

[node name="SerializationTest" type="Node3D"]
script = ExtResource("1_xfx3p")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mkv08")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.0146024, 0.827169, -0.561763, 0.021494, 0.561953, 0.82689, 0.999662, 3.63131e-08, -0.025985, -2.62206, 4.09464, 0)
light_energy = 1.5

[node name="GameCamera" type="Node3D" parent="."]
script = ExtResource("3_uq60h")

[node name="AnglePivot" type="Node3D" parent="GameCamera"]
transform = Transform3D(1, 0, 0, 0, 0.866026, -0.5, 0, 0.5, 0.866026, 0, 0, 0)

[node name="ZoomPivot" type="Node3D" parent="GameCamera/AnglePivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="Smoothing" type="Node3D" parent="GameCamera/AnglePivot/ZoomPivot"]
script = ExtResource("4_4gn3j")

[node name="Camera3D" type="Camera3D" parent="GameCamera/AnglePivot/ZoomPivot/Smoothing"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="MouseRaycast" type="RayCast3D" parent="GameCamera/AnglePivot/ZoomPivot/Smoothing/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, -1, 0, 1, -2.98023e-08, 0, 0, 0)
target_position = Vector3(0, -25, 0)
collide_with_areas = true
